# hit-my-balls

./: CMakeLists.txt  LICENSE.MD  README.md
BSE/include/: Gameobject.hpp  Label.hpp
BSE/include/core/: BSE.hpp  Entity.hpp  Input.hpp  Scene.hpp  Systems.hpp  Window.hpp
BSE/src/core/: Input.cpp  Scene.cpp  Window.cpp
src/: Football.cpp  Football.hpp  Player.cpp  Player.hpp  Spawner.cpp  Spawner.hpp  main.cpp
